--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 html {
   position: relative;
   height: 100%;
+  min-height: 620px;
   min-width: 450px;
   width: auto !important;
 }
@@ -13,14 +14,7 @@ body {
   background-color: #808080;
   padding-bottom: 60px;
   padding-top: 60px;
-  height: 100%;
-
-}
-
-img {
-  display: block;
-  width: 60%;
-  margin: auto;
+  height: auto;
 }
 
 .flex-container {
@@ -120,8 +114,8 @@ a.dropdown-item:active {
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 20px;
-  margin: 0 2% 0 2%;
-  height: 80%;
+  margin: 0 2% 60px 2%;
+  height: auto;
 }
 
 .side-menu-products {
@@ -132,7 +126,6 @@ a.dropdown-item:active {
 }
 
 .side-menu-items {
-  grid-row: auto;
   display: grid;
   grid-auto-rows: repeat(3, 1fr);
   border: 1px solid black;
@@ -141,7 +134,7 @@ a.dropdown-item:active {
 
 .active-product-page {
   color: white !important;
-  background-color: #606060;
+  background-color: #282828;
 }
 
 .side-menu-link {
@@ -166,5 +159,170 @@ a.dropdown-item:active {
 .main-content-products {
   grid-column: 3 / span 8;
   grid-row: span 3;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-row-gap: 8px;
+}
+
+.main-content-group {
   border: 1px solid black;
+  grid-template-columns: repeat(4, 1fr);
+  margin: .5%;
+  display: grid;
+}
+
+.main-content-photo {
+  grid-column: 1;
+  margin: 2px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  border-right: 2px solid #606060;
+}
+
+.photo {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  margin: auto;
+}
+
+.main-content-item {
+  grid-column: 2 /span 3;
+  margin: 2px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.main-content-item-header {
+  grid-row: 1;
+  font-size: 1.5em;
+  align-self: center;
+  padding-left: 5px;
+  border-bottom: 2px solid #606060;
+}
+
+.main-content-item-text {
+  grid-row: 2 / span 2;
+  padding-left: 5px;
+}
+
+.wrapper-home {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-row-gap: 10px;
+  margin: 0 2% 80px 2%;
+  height: auto;
+}
+
+.home-group {
+  grid-column: span 4;
+  display: grid;
+  margin: 2px;
+  border: 2px solid black;
+}
+
+.home-photo {
+  grid-column: 1;
+  margin: 2px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  border-right: 2px solid #606060;
+}
+
+.home-content {
+  grid-column: 2 / span 3;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  margin: 2px;
+}
+
+.home-header {
+  font-size: 1.5em;
+  align-self: center;
+  padding-left: 5px;
+  border-bottom: 2px solid #606060;
+}
+
+.home-text {
+  grid-row: 2 / span 2;
+}
+
+.reverse-home-photo {
+  grid-column: 4;
+  margin: 2px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  border-left: 2px solid #606060;
+}
+
+.reverse-home-content {
+  grid-column: 1 / span 3;
+  grid-row: 1;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  margin: 2px;
+}
+
+.wrapper-SS {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 10px;
+  margin: 0 2% 80px 2%;
+  height: auto;
+}
+
+.SS-group {
+  grid-column: span 4;
+  display: grid;
+  margin: 2px;
+  border: 2px solid black;
+}
+
+.SS-photo {
+  grid-column: 1;
+  margin: 2px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  border-right: 2px solid #606060;
+}
+
+.SS-content {
+  grid-column: 2 / span 3;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  margin: 2px;
+}
+
+.SS-header {
+  font-size: 1.5em;
+  align-self: center;
+  padding-left: 5px;
+  border-bottom: 2px solid #606060;
+}
+
+.SS-text {
+  grid-row: 2 / span 2;
+}
+
+.reverse-SS-photo {
+  grid-column: 4;
+  margin: 2px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  border-left: 2px solid #606060;
+}
+
+.reverse-SS-content {
+  grid-column: 1 / span 3;
+  grid-row: 1;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  margin: 2px;
 }
