--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,6 @@
 html {
   position: relative;
   height: 100%;
-  min-height: 620px;
-  min-width: 450px;
-  width: auto !important;
 }
 
 body {
@@ -20,12 +17,6 @@ body {
 .flex-container {
   display: flex;
   justify-content: center;
-}
-
-.rec-ref-columns {
-  margin: 5px;
-  padding: 10px;
-  border: 2px solid black;
 }
 
 .column-item {
@@ -111,8 +102,8 @@ a.dropdown-item:active {
 
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: auto;
+  grid-template-rows: auto;
   grid-column-gap: 20px;
   margin: 0 2% 60px 2%;
   height: auto;
@@ -127,7 +118,8 @@ a.dropdown-item:active {
 
 .side-menu-items {
   display: grid;
-  grid-auto-rows: repeat(3, 1fr);
+  grid-row: span 2;
+  grid-auto-rows: auto;
   border: 1px solid black;
   margin: 2px;
 }
@@ -209,8 +201,8 @@ a.dropdown-item:active {
 
 .wrapper-home {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: auto;
+  grid-template-rows: auto;
   grid-row-gap: 10px;
   margin: 0 2% 80px 2%;
   height: auto;
@@ -235,7 +227,7 @@ a.dropdown-item:active {
 .home-content {
   grid-column: 2 / span 3;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: auto;
   margin: 2px;
 }
 
@@ -263,14 +255,14 @@ a.dropdown-item:active {
   grid-column: 1 / span 3;
   grid-row: 1;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: auto;
   margin: 2px;
 }
 
 .wrapper-SS {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: auto;
+  grid-template-rows: auto;
   grid-row-gap: 10px;
   margin: 0 2% 80px 2%;
   height: auto;
@@ -295,7 +287,7 @@ a.dropdown-item:active {
 .SS-content {
   grid-column: 2 / span 3;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: auto;
   margin: 2px;
 }
 
@@ -312,7 +304,7 @@ a.dropdown-item:active {
 
 .reverse-SS-photo {
   grid-column: 4;
-  margin: 2px;
+  margin: 4px;
   display: grid;
   justify-content: center;
   align-items: center;
@@ -323,6 +315,6 @@ a.dropdown-item:active {
   grid-column: 1 / span 3;
   grid-row: 1;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: auto;
   margin: 2px;
 }
