--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,8 @@ body {
 .column-item {
   margin: 5px;
   padding: 10px;
-  border: 1px solid black;
-  border-radius: 10px;
+  /* border: 1px solid black; */
+  /* border-radius: 10px; */
 }
 
 .centered {
@@ -120,7 +120,7 @@ a.dropdown-item:active {
   display: grid;
   grid-row: span 2;
   grid-auto-rows: auto;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin: 2px;
 }
 
@@ -143,7 +143,7 @@ a.dropdown-item:active {
 }
 
 .side-menu-photo {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin: 2px;
   grid-row: 2 / span 3;
 }
@@ -157,7 +157,7 @@ a.dropdown-item:active {
 }
 
 .main-content-group {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   grid-template-columns: repeat(4, 1fr);
   margin: .5%;
   display: grid;
@@ -169,7 +169,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  border-right: 2px solid #606060;
+  /* border-right: 2px solid #606060; */
 }
 
 .photo {
@@ -202,7 +202,7 @@ a.dropdown-item:active {
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto;
-  grid-row-gap: 10px;
+  grid-row-gap: 20px;
   margin: 0 2% 80px 2%;
   height: auto;
 }
@@ -211,7 +211,7 @@ a.dropdown-item:active {
   grid-column: span 4;
   display: grid;
   margin: 2px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
 }
 
 .home-photo {
@@ -220,7 +220,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  border-right: 2px solid #606060;
+  /* border-right: 2px solid #606060; */
 }
 
 .home-content {
@@ -232,7 +232,6 @@ a.dropdown-item:active {
 
 .home-header {
   font-size: 1.5em;
-  align-self: center;
   padding-left: 5px;
 }
 
@@ -246,7 +245,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  border-left: 2px solid #606060;
+  /* border-left: 2px solid #606060; */
 }
 
 .reverse-home-content {
@@ -270,7 +269,7 @@ a.dropdown-item:active {
   grid-column: span 4;
   display: grid;
   margin: 2px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
 }
 
 .SS-photo {
@@ -279,7 +278,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  border-right: 2px solid #606060;
+  /* border-right: 2px solid #606060; */
 }
 
 .SS-content {
@@ -305,7 +304,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  border-left: 2px solid #606060;
+  /* border-left: 2px solid #606060; */
 }
 
 .reverse-SS-content {
