--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,6 @@ body {
   justify-content: center;
 }
 
-.column-item {
-  margin: 5px;
-  padding: 10px;
-  /* border: 1px solid black; */
-  /* border-radius: 10px; */
-}
-
 .centered {
   text-align: center;
 }
@@ -120,7 +113,7 @@ a.dropdown-item:active {
   display: grid;
   grid-row: span 2;
   grid-auto-rows: auto;
-  /* border: 1px solid black; */
+  border: 1px solid black;
   margin: 2px;
 }
 
@@ -143,7 +136,7 @@ a.dropdown-item:active {
 }
 
 .side-menu-photo {
-  /* border: 1px solid black; */
+  border: 1px solid black;
   margin: 2px;
   grid-row: 2 / span 3;
 }
@@ -157,7 +150,7 @@ a.dropdown-item:active {
 }
 
 .main-content-group {
-  /* border: 1px solid black; */
+  border: 1px solid black;
   grid-template-columns: repeat(4, 1fr);
   margin: .5%;
   display: grid;
@@ -169,7 +162,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  /* border-right: 2px solid #606060; */
+  border-right: 2px solid #606060;
 }
 
 .photo {
@@ -202,7 +195,7 @@ a.dropdown-item:active {
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto;
-  grid-row-gap: 20px;
+  grid-row-gap: 25px;
   margin: 0 2% 80px 2%;
   height: auto;
 }
@@ -211,7 +204,7 @@ a.dropdown-item:active {
   grid-column: span 4;
   display: grid;
   margin: 2px;
-  /* border: 2px solid black; */
+  border: 2px solid black;
 }
 
 .home-photo {
@@ -220,7 +213,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  /* border-right: 2px solid #606060; */
+  border-right: 2px solid #606060;
 }
 
 .home-content {
@@ -245,7 +238,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  /* border-left: 2px solid #606060; */
+  border-left: 2px solid #606060;
 }
 
 .reverse-home-content {
@@ -269,7 +262,7 @@ a.dropdown-item:active {
   grid-column: span 4;
   display: grid;
   margin: 2px;
-  /* border: 2px solid black; */
+  border: 2px solid black;
 }
 
 .SS-photo {
@@ -278,7 +271,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  /* border-right: 2px solid #606060; */
+  border-right: 2px solid #606060;
 }
 
 .SS-content {
@@ -304,7 +297,7 @@ a.dropdown-item:active {
   display: grid;
   justify-content: center;
   align-items: center;
-  /* border-left: 2px solid #606060; */
+  border-left: 2px solid #606060;
 }
 
 .reverse-SS-content {
